IVYPORTAL-5988 Various or urgent requests in IVYPORTAL S160: + Fixe the UI bug: horizontal scroll when open task details

--- a/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
+++ b/AxonIvyPortal/PortalKit/webContent/resources/css/module.css
@@ -3064,7 +3064,7 @@ a.task-details-document-add-link {
   position: absolute;
   padding-right: inherit;
   margin: 0 !important;
-  right: -7px;
+  right: -2px;
 }
 
 .responsive-handle-button {
